--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,15 @@
     <string name="kirim_pesan">Kirim Pesan</string>
     <string name="nama_user">Nama User</string>
     <string name="email_user">Email@user.com</string>
+
+
+    <string-array name="jam_mengajar_array">
+        <item>Sesi 1: 09.00 - 10.00</item>
+        <item>Sesi 2: 10.30 - 11.30</item>
+        <item>Sesi 3: 13.00 - 14.00</item>
+        <item>Sesi 4: 15.00 - 16.00</item>
+    </string-array>
+    <string name="chat_button">Mulai percakapan dengan instruktur</string>
+    <string name="send_success">Berhasil terkirim</string>
+    <string name="send_error">Gagal terkirim</string>
 </resources>
